# Modern_Cpp

./: .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODEOWNER  LICENSE  Makefile  README.md  clean.sh  exec.sh  exec_ninja.sh  main.cpp
.github/workflows/: codecov.yml  pages.yml
dep/: Dependencies.md  README.md
docs/: ACKNOWLEDGEMENTS.md  CHANGELOG.md  dir_000001_000000.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  fibonacciTest_8cpp__incl.map  fibonacciTest_8cpp__incl.md5  fibonacci_8cpp.js  fibonacci_8cpp__incl.map  fibonacci_8hpp.html  files.html  globals.html  graph_legend.html  mainTest_8hpp.html  mainTest_8hpp__dep__incl.map  mainTest_8hpp__incl.map  mainTest_8hpp__incl.md5  main_8cpp__incl.map  main_8cpp__incl.md5  navtreedata.js  navtreeindex0.js
docs/Doxygen/: cppStandard_8hpp.html  cppStandard_8hpp.js  cppStandard_8hpp__incl.md5  cppStandard_8hpp_source.html  dir_000001_000000.html  dir_000002_000001.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9.js  fibonacciTest_8cpp.html  fibonacci_8cpp.html  fibonacci_8cpp__incl.md5  fibonacci_8hpp.html  fibonacci_8hpp_source.html  files.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  lib_8cpp.html  lib_8cpp.js  lib_8cpp__incl.map  lib_8cpp__incl.md5  lib_8hpp.html  lib_8hpp.js  lib_8hpp__dep__incl.map  lib_8hpp__dep__incl.md5  lib_8hpp__incl.map  lib_8hpp__incl.md5  lib_8hpp_source.html  mainTest_8hpp.html  mainTest_8hpp__dep__incl.md5  mainTest_8hpp_source.html  main_8cpp.html  (+4 more)
docs/Doxygen/search/: all_0.js  all_2.js  all_4.js  all_5.js  files_2.js  functions_1.js  searchdata.js
docs/doxygen-html/: cppStandard_8hpp__incl.map  cppStandard_8hpp_source.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  fibonacciTest_8cpp.html  fibonacci_8cpp.html  fibonacci_8hpp.html  fibonacci_8hpp.js  fibonacci_8hpp__dep__incl.map  fibonacci_8hpp__dep__incl.md5  files.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  mainTest_8hpp.html  mainTest_8hpp_source.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  navtreeindex0.js
docs/gcov-html/: index.html
docs/search/: all_0.js  files_0.js  functions_0.js  searchdata.js
lib/: CMakeLists.txt  lib.cpp  lib.hpp
scripts/: clean.sh  exec.sh  execClang.sh  execNinja.sh  execSubmodule.sh  exec_ninja.sh  runCoverage.sh  runDoxygen.sh  runSubmodule.sh  submodule.sh
scripts/Doxygen/: README.md  doxyfile.conf
src/: CMakeLists.txt  cppStandard.hpp  fibonacci.cpp  fibonacci.hpp  main.cpp
test/: CMakeLists.txt  fibonacciTest.cpp  mainTest.hpp
uml/: diag.plantuml
(+5 files in other folders)
